[package]
name = "rigtruck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
gitlab = "0.1401.0"
tokio = { version = "1", features = [ "full" ] }
futures-util = "0.3"
clap = "3.0.0-beta.4"
regex = "1.5"
git2 = "0.13"
dirs = "3"

serde_json = "1"

indicatif = "0.16"



